# HAZE

./: .gitignore  .gitmodules  LICENSE  README.md  devbuild.sh  meson.build
src/: meson.build
src/engine/: config.h  engine.c  engine.h  enumstr.c  enumstr.h  globj.c  globj.h  main.c  memory.c  memory.h  meson.build  pathy.c  pathy.h  sdlimp.h  shaders.c  shaders.h  textures.c  textures.h  tomlext.c  tomlext.h
src/sdktools/: img2srtex.c  meson.build
src/shared/: crypto.c  crypto.h  env.h  errors.c  errors.h  global.h  hzshared.h  hztexldr.c  hztexldr.h  meson.build  srtex.h  umman.c  umman.h
testgame/: config.toml
